--- a/maps/index.html
+++ b/maps/index.html
@@ -2,6 +2,6 @@
     <body>
     <div id="map" style="height: 100%"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNLrJhOMz6idD05pzfn5lhA-TAw-mAZCU"></script>
-        <script src="./src/index.ts"></script>
+        <script src="src/index.ts"></script>
     </body>
 </html>
